<resources>
    <string name="settings_activity_title">Settings</string>

    <!-- Prefs -->
    <string name="general_settings_header">General Settings</string>
    <string name="api_settings_header">API Settings</string>
    <string name="api_key_title">API Key</string>
    <string name="quote_api_title">Market Data Provider</string>
    <string name="quote_api_help">Select a market data provider to use. You will have to obtain an API key from
        whichever you select. IEX Cloud and World Trading Data both have free services.
    </string>
    <string name="note_alphavantage">Tap to set. Note: free keys are very limited and can only fetch 5 quotes per
        minute
    </string>
    <string name="note_iexcloud">Tap to set.</string>
    <string name="note_intrinio">Tap to set. Note: subscription is required.</string>
    <string name="note_wtd">Tap to set. Note: free keys are limited to 250 queries per day.</string>
    <string name="test_api">Test</string>
    <string name="test_api_help">Tap to test the configuration for the selected provider.</string>

    <!-- Nav menu -->
    <string name="rearrange_title">Change Symbols</string>
    <string name="app_name">MarketPlanner</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="success_button">Success button</string>
    <string name="that_s_a_marketplace_screen">That\'s a marketplace screen</string>
    <string name="to_reports">To reports</string>
    <string name="to_marketplace">To marketplace</string>
    <string name="company_details">Company details</string>
    <string name="to_company_details">To company details</string>
    <string name="button">Button</string>
    <string name="to_predscriptions">to predscriptions</string>
    <string name="marketplace">Marketplace</string>
    <string name="reports">Reports</string>
    <string name="predscriptions">Predscriptions</string>
    <string name="settings">Settings</string>
    <string name="to_settings">To settings</string>
    <string name="log_in">LOG IN</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="log_in_with_google">Log in with GOOGLE</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_out">Log out</string>
    <string name="sing_up">Sing Up</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="recommendation">Recommendation</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="title_activity_login">LoginActivity</string>
</resources>
